--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 	  <button class="btn" id="searchbutton" name="button" value="click" onClick="search(this.form);return false;">
   	    <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
 	  </button>
-	  <button class="btn" id="restorebutton" name="button" value="click" onClick="restore();return false;">
+	  <button class="btn" id="restorebutton" name="button" value="click" onClick="initializeWorld();return false;">
   	    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 	  </button>
 	  <button class="btn" id="switchdetailbutton" name="button" value="click" onClick="switchDetail();return false;">
