--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 	  <button class="btn" id="switchdetailbutton" name="button" value="click" onClick="switchDetail();return false;">
 	    <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
 	  </button>
-	  <button class="btn" id="addlinedetailbutton" name="button" value="click" onClick="switchLine();return false;">
+	  <button class="btn" id="addlinedetailbutton" name="button" value="click" onClick="switchHalf();return false;">
 	    <span class="glyphicon glyphicon-road" aria-hidden="true"></span>
 	  </button>
 	  <button class="btn" id="restorebutton" name="button" value="click" onClick="initializeWorld();return false;">
