--- a/static/main.css
+++ b/static/main.css
@@ -27,7 +27,7 @@
   background-color: rgba(50, 50, 100, 0.8);
   color: rgba(200, 200, 200, 0.8);
 }
-#addlinedetailbutton{
+#switchhalfbutton{
   background-color: rgba(50, 100, 50, 0.8);
   color: rgba(200, 200, 200, 0.8);
 }
