--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@ SOFTWARE.
   <body>
     <div class="wrapper">
       <div id="viewArea"></div>
-      <div class="toolBox">
+      <div id="toolBox">
 	<form class="well form-search" id="searchbox">
 	  <input type="text" class="input-medium search-query" name="query" value="" placeholder="Let's explore!">
 	  <button class="btn" id="searchbutton" name="button" value="click" onClick="search(this.form);return false;">
